PN-2020: fix test